homework styles and pattern

--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -14,7 +14,6 @@
   }
   
   .removeButton {
-    background: #222;
     background: linear-gradient(#333, #222);
     box-sizing: border-box;
     border: 0px solid rgb(249, 1, 1);
@@ -28,14 +27,12 @@
   
   .removeButton:hover,
   .removeButton:focus {
-    background: #292929;
     background: linear-gradient(#393939, #292929);
-    color: #5f5;
+    color: yellowgreen;
     outline: none;
   }
   
   .removeButton:active {
-    background: #292929;
     background: linear-gradient(#393939, #292929);
     box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
     top: 1px;
