--- a/src/components/AppStyle.module.css
+++ b/src/components/AppStyle.module.css
@@ -4,14 +4,14 @@
     width: 450px;
   
     border-radius: 10px;
-    border: 3px solid #888;
+    border: 3px solid red;
     animation: glow 800ms ease-out infinite alternate;
     background: blueviolet;
-    background: linear-gradient(#333933, #222922);
-    border-color: #393;
+    background: linear-gradient(blueviolet, blue);
+    border-color: red;
     box-shadow: 0 0 5px rgba(0, 255, 0, 0.2), inset 0 0 5px rgba(0, 255, 0, 0.1),
       0 2px 0 #000;
-    color: #efe;
+    color: black;
     outline: none;
   }
   
@@ -19,8 +19,9 @@
     font-weight: 900;
     max-width: 180px;
     padding-left: 135px;
+    color: black;
   }
   
   .secondaryTitle {
-    color: #393;
+    color: black;
   }
