--- a/src/components/FilterContact/FilterContact.module.css
+++ b/src/components/FilterContact/FilterContact.module.css
@@ -4,12 +4,11 @@
   }
   
   .input {
-    background: #222;
     background: linear-gradient(#333, #222);
-    border: 1px solid #444;
+    border: 1px solid red;
     border-radius: 10px;
-    box-shadow: 0 2px 0 #000;
-    color: #888;
+    box-shadow: 0 2px 0 black;
+    color: #fff;
     display: block;
     float: left;
     font-family: 'Cabin', helvetica, arial, sans-serif;
@@ -25,18 +24,19 @@
   }
   
   .input::-webkit-input-placeholder {
-    color: #888;
+    color: #fff
+    ;
   }
   
   .input:-moz-placeholder {
-    color: #888;
+    color: #fff;
   }
   
   .input:focus {
     animation: glow 800ms ease-out infinite alternate;
-    background: #222922;
+    /* background: yellowgreen; */
     background: linear-gradient(#333933, #222922);
-    border-color: aquamarine;
+    border-color: red;
     box-shadow: 0 0 5px rgba(242, 255, 0, 0.2), inset 0 0 5px rgba(0, 255, 0, 0.1),
       0 2px 0 #000;
     color: #efe;
@@ -44,23 +44,23 @@
   }
   
   .input:focus::-webkit-input-placeholder {
-    color: #efe;
+    color: red;
   }
   
   .input:focus:-moz-placeholder {
-    color: #efe;
+    color: red;
   }
   
   @keyframes glow {
     0% {
-      border-color: #393;
-      box-shadow: 0 0 5px rgba(255, 221, 0, 0.471),
+      border-color: red;
+      box-shadow: 0 0 5px red,
         inset 0 0 5px rgba(0, 255, 0, 0.1), 0 2px 0 #000;
     }
     100% {
-      border-color: #6f6;
-      box-shadow: 0 0 20px rgba(255, 247, 0, 0.674),
-        inset 0 0 10px rgba(204, 255, 0, 0.4), 0 2px 0 #000;
+      border-color: red;
+      box-shadow: 0 0 20px red,
+        inset 0 0 10px red, 0 2px 0 #000;
     }
   }
   
