--- a/src/components/FormContact/FormContact.module.css
+++ b/src/components/FormContact/FormContact.module.css
@@ -8,12 +8,12 @@
   }
   
   .input {
-    background: #222;
+    background: blueviolet;
     background: linear-gradient(#333, #222);
-    border: 1px solid #444;
+    border: 1px solid red;
     border-radius: 10px;
     box-shadow: 0 2px 0 #000;
-    color: #888;
+    color: #fff;
     display: block;
     float: left;
     font-family: 'Cabin', helvetica, arial, sans-serif;
@@ -29,18 +29,18 @@
   }
   
   .input::-webkit-input-placeholder {
-    color: #888;
+    color: #fff;
   }
   
   .input:-moz-placeholder {
-    color: #888;
+    color: #fff;
   }
   
   .input:focus {
     animation: glow 800ms ease-out infinite alternate;
-    background: #222922;
+    background: blueviolet;
     background: linear-gradient(#333933, #222922);
-    border-color: #393;
+    border-color: red;
     box-shadow: 0 0 5px rgba(0, 255, 0, 0.2), inset 0 0 5px rgba(0, 255, 0, 0.1),
       0 2px 0 #000;
     color: #efe;
@@ -48,23 +48,23 @@
   }
   
   .input:focus::-webkit-input-placeholder {
-    color: #efe;
+    color: red;
   }
   
   .input:focus:-moz-placeholder {
-    color: #efe;
+    color: red;
   }
   
   @keyframes glow {
     0% {
-      border-color: #393;
+      border-color: red;
       box-shadow: 0 0 5px rgba(0, 255, 0, 0.2), inset 0 0 5px rgba(0, 255, 0, 0.1),
         0 2px 0 #000;
     }
     100% {
-      border-color: #6f6;
-      box-shadow: 0 0 20px rgba(0, 255, 0, 0.6),
-        inset 0 0 10px rgba(0, 255, 0, 0.4), 0 2px 0 #000;
+      border-color: red;
+      box-shadow: 0 0 20px red,
+        inset 0 0 10px red, 0 2px 0 #000;
     }
   }
   
@@ -72,7 +72,7 @@
     background: #222;
     background: linear-gradient(#333, #222);
     box-sizing: border-box;
-    border: 1px solid #393;
+    border: 1px solid red;
     border-radius: 10px;
     box-shadow: 0 2px 0 #000;
     color: #fff;
@@ -94,12 +94,12 @@
   .button:focus {
     background: #292929;
     background: linear-gradient(#393939, #292929);
-    color: #5f5;
+    color: red;
     outline: none;
   }
   
   .button:active {
-    background: #292929;
+    background: red;
     background: linear-gradient(#393939, #292929);
     box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
     top: 1px;
