--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -28,7 +28,7 @@
   .removeButton:hover,
   .removeButton:focus {
     background: linear-gradient(#393939, #292929);
-    color: yellowgreen;
+    color: red;
     outline: none;
   }
   
